Fix embed content not showing;

--- a/static/scss/docs.scss
+++ b/static/scss/docs.scss
@@ -202,7 +202,6 @@ main.docs {
 
   .embed {
     position: relative;
-    display: none;
     width: 740px;
     max-width: 100%;
     padding: 40px 50px 0;
